# killing-eve-books-database

./: .editorconfig  .gitignore  CHANGELOG.md  CITATION.cff  LICENSE-CODE  README.md  main.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-database.yml
data/: books.csv  chapters.csv  characters.csv  characters_appearances.csv  glossary.csv  locations.csv  locations_appearances.csv  organizations.csv  relationships.csv
schema/: datasette-metadata.json  er_diagram.mmd  schema.sql
scripts/: export_to_gephi.py  export_to_jsonld.py
tests/: test_database_integrity.py
